--- a/src/_scss/_vars.scss
+++ b/src/_scss/_vars.scss
@@ -1,3 +1,111 @@
 ///
 // Site Variables
 ///
+
+// Font settings
+$font-body: "IBM Plex Serif", serif;
+$font-display: "Montserrat", sans-serif;
+$size-display-1: 3.3rem;
+$size-display-2: 2.3rem;
+$size-display-3: 1.6rem;
+$size-body: 1.5rem;
+$size-lead: 2rem;
+$size-sub: 1.1rem;
+$weight-display-med: 500;
+$weight-display-semi: 600;
+$weight-body-light: 300;
+$weight-body-bold: 600;
+$leading-1x: 1.2rem;
+$leading-2x: 2.4rem;
+$leading-3x: 3.6rem;
+$leading-4x: 4.8rem;
+
+// Type specs
+$type-specs: (
+  h2: (
+    font: $font-display,
+    size: $size-display-1,
+    leading: $leading-3x,
+    weight: $weight-display-med,
+    kerning: 1px,
+    transform: none,
+    style: normal
+  ),
+  h3: (
+    font: $font-display,
+    size: $size-display-2,
+    leading: $leading-3x,
+    weight: $weight-display-semi,
+    kerning: 3px,
+    transform: uppercase,
+    style: normal
+  ),
+  h4: (
+    font: $font-display,
+    size: $size-display-2,
+    leading: $leading-3x,
+    weight: $weight-display-med,
+    kerning: 2px,
+    transform: none,
+    style: normal
+  ),
+  h5: (
+    font: $font-display,
+    size: $size-display-3,
+    leading: $leading-2x,
+    weight: $weight-display-semi,
+    kerning: 2px,
+    transform: uppercase,
+    style: normal
+  ),
+  h6: (
+    font: $font-display,
+    size: $size-display-3,
+    leading: $leading-2x,
+    weight: $weight-display-semi,
+    kerning: 2px,
+    transform: none,
+    style: normal
+  ),
+  subtext: (
+    font: $font-display,
+    size: $size-sub,
+    leading: $leading-2x,
+    weight: $weight-display-semi,
+    kerning: 3px,
+    transform: uppercase,
+    style: normal
+  ),
+  body: (
+    font: $font-body,
+    size: $size-body,
+    leading: $leading-2x,
+    weight: $weight-body-light,
+    kerning: 0,
+    transform: none,
+    style: normal
+  ),
+  lead: (
+    font: $font-body,
+    size: $size-lead,
+    leading: $leading-3x,
+    weight: $weight-body-light,
+    kerning: 0,
+    transform: none,
+    style: normal
+  )
+);
+
+// Colors
+$color-white: #fff;
+$color-primary: #8fc52a;
+$color-secondary: #e7a365;
+$color-accent: #667ece;
+$color-base-800: #2d2d2d;
+$color-base-700: #565656;
+$color-base-600: #6f6f6f;
+$color-base-500: #909090;
+$color-base-400: #b6b5b5;
+$color-base-300: #cacaca;
+$color-base-200: #ededed;
+$color-base: $color-base-800;
