--- a/src/_scss/index.scss
+++ b/src/_scss/index.scss
@@ -9,6 +9,8 @@
  Tags:
  */
 
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,400i,600,600i|Montserrat:500,500i,600,600i&display=swap");
+
 // Configs
 @import "vars";
 @import "mixins";
