--- a/src/_scss/overrides/_blocks.scss
+++ b/src/_scss/overrides/_blocks.scss
@@ -1,6 +1,6 @@
+.author .author-info,
 .hentry,
 .post-type-archive .page-header,
-.author .author-info,
 #comments,
 #comments-policy,
 #disqus_thread,
@@ -13,6 +13,7 @@
 .hentry,
 .post-type-archive .page-header {
   margin-bottom: 6rem;
+  padding: 30px 30px 30px 0;
 }
 
 #top_search #s {
