--- a/src/_scss/overrides/_blocks.scss
+++ b/src/_scss/overrides/_blocks.scss
@@ -1,3 +1,8 @@
+.authorbox {
+  border: none;
+  padding: 12px 8px;
+}
+
 .author .author-info,
 .hentry,
 .post-type-archive .page-header,
@@ -13,7 +18,11 @@
 .hentry,
 .post-type-archive .page-header {
   margin-bottom: 6rem;
-  padding: 30px 30px 30px 0;
+  padding: 30px;
+
+  @media (min-width: 800px) {
+    padding-left: 0;
+  }
 }
 
 #top_search #s {
