--- a/src/custom.css
+++ b/src/custom.css
@@ -2,6 +2,7 @@
   Custom styles added as embedded stylesheet
 */
 
+/* stylelint-disable */
 .site-header .site-title,
 .site-header .site-title a,
 #headernav .site-title,
@@ -720,3 +721,4 @@ a:active {
 .site-credits a:visited {
   color: #aaaaaa;
 }
+/* stylelint-enable */
