--- a/src/_scss/components/_what-if-ad.scss
+++ b/src/_scss/components/_what-if-ad.scss
@@ -24,8 +24,9 @@
   &::after {
     content: "";
     margin: auto;
+    max-width: 25%;
     width: 200px;
-    height: 200px;
+    height: 150px;
     grid-column: 1 / -1;
     grid-row: 1 / -1;
     background-image: url("/images/icon-youtube.svg");
