Changes for live launch

--- a/src/_scss/overrides/_masthead.scss
+++ b/src/_scss/overrides/_masthead.scss
@@ -26,7 +26,7 @@
 .mobile-title a {
   padding-top: 90px;
   width: 200px;
-  background-image: url("/images/wordmark.svg");
+  background-image: url("http://lifeasweliveit.com/wp-content/uploads/2020/03/wordmark@2x.png");
   background-size: contain;
 }
 
