--- a/src/_scss/components/_what-if-ad.scss
+++ b/src/_scss/components/_what-if-ad.scss
@@ -1,46 +1,46 @@
 .what-if-ad {
   text-align: center;
-}
 
-.what-if-ad__logo {
-  margin-bottom: 4rem;
-}
+  .what-if-ad__logo {
+    margin-bottom: 4rem;
+  }
 
-.what-if-ad__brand {
-  margin: 0 auto;
-  max-width: 200px;
-  display: block;
-}
+  .what-if-ad__brand {
+    margin: 0 auto;
+    max-width: 200px;
+    display: block;
+  }
 
-.what-if-ad__intro {
-  margin: 4rem auto;
-  max-width: 500px;
-}
+  .what-if-ad__intro {
+    margin: 4rem auto;
+    max-width: 500px;
+  }
 
-.what-if-ad__channel-link {
-  display: grid;
-  position: relative;
+  .what-if-ad__channel-link {
+    display: grid;
+    position: relative;
 
-  &::after {
-    content: "";
-    margin: auto;
-    max-width: 25%;
-    width: 200px;
-    height: 150px;
+    &::after {
+      content: "";
+      margin: auto;
+      max-width: 25%;
+      width: 200px;
+      height: 150px;
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      background-image: url("http://lifeasweliveit.com/wp-content/uploads/2020/03/icon-youtube@2x.png");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 100%;
+    }
+  }
+
+  .what-if-ad__channel-cover {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    display: block;
     grid-column: 1 / -1;
     grid-row: 1 / -1;
-    background-image: url("/images/icon-youtube.svg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 100%;
   }
-}
-
-.what-if-ad__channel-cover {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-  display: block;
-  grid-column: 1 / -1;
-  grid-row: 1 / -1;
 }
